Fixed issues with map and navigation bar overlap. Begin work on LightList.vue

--- a/app/app.scss
+++ b/app/app.scss
@@ -19,3 +19,7 @@
     font-family: "Font Awesome 5 Free", "fa-regular-400";
     font-weight: 400;
 }
+.rog {
+    font-family: "Return of Ganon", "ReturnofGanon";
+    font-weight: 400;
+}
